--- a/iosApp/Configuration/Config.xcconfig
+++ b/iosApp/Configuration/Config.xcconfig
@@ -5,3 +5,6 @@ PRODUCT_BUNDLE_IDENTIFIER=koke050800.firebaseservices.portfoliokmp$(TEAM_ID)
 
 CURRENT_PROJECT_VERSION=1
 MARKETING_VERSION=1.0
+
+// Firebase Service PATH
+GOOGLE_SERVICE=$(SRCROOT)/Firebase/GoogleService-Info.plist
