feat(gitignore): Add GoogleService-Info.plist for iOS

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ captures
 node_modules/
 /iosApp/Pods
 
-# Android (google-services.json)
+# Firebase Android (google-services.json)
 composeApp/src/debug/google-services.json
 composeApp/src/release/google-services.json
+
+# Firebase IOS (GoogleService-Info.plist)
+iosApp/Firebase/GoogleService-Info.plist
