--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,7 +14,7 @@ kotlinx-serialization = "1.9.0"
 compose = "1.9.3"
 compose-compiler = "2.2.21"
 compose-hot-reload = "1.0.0-rc04"
-androidx-activity = "1.11.0"
+androidx-activity = "1.12.0"
 material3-adaptive = "1.2.0"
 
 # AndroidX
@@ -27,9 +27,7 @@ koin = "4.1.1"
 coil = "3.3.0"
 
 # Navigation
-nav3-core = "1.0.0"
-nav3-lifecycle-viewmodel = "2.10.0"
-nav3-material3-adaptive = "1.3.0-alpha04"
+navigation-compose = "2.9.1"
 
 # Firebase
 firebase-bom = "34.6.0"
@@ -46,8 +44,8 @@ kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serializa
 # UI & Compose
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity" }
 compose-runtime = { module = "org.jetbrains.compose.runtime:runtime", version.ref = "compose" }
-compose-ui = { module = "org.jetbrains.compose.ui:ui", version.ref = "compose" } # Añadida para completitud
-compose-ui-tooling-preview = { module = "org.jetbrains.compose.ui:ui-tooling-preview", version.ref = "compose" } # Añadida para completitud
+compose-ui = { module = "org.jetbrains.compose.ui:ui", version.ref = "compose" }
+compose-ui-tooling-preview = { module = "org.jetbrains.compose.ui:ui-tooling-preview", version.ref = "compose" }
 
 # Material 3 Adaptive
 material3-adaptive = { module = "org.jetbrains.compose.material3.adaptive:adaptive", version.ref = "material3-adaptive" }
@@ -59,17 +57,15 @@ androidx-lifecycle-viewmodel-compose = { module = "org.jetbrains.androidx.lifecy
 androidx-lifecycle-runtime-compose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-runtime-compose", version.ref = "androidx-lifecycle" }
 androidx-lifecycle-viewmodel-savedstate = { module = "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel-savedstate", version.ref = "androidx-lifecycle" }
 
-# Navigation 3
-navigation3-runtime = { module = "androidx.navigation3:navigation3-runtime", version.ref = "nav3-core" }
-navigation3-ui = { module = "androidx.navigation3:navigation3-ui", version.ref = "nav3-core" }
-navigation3-lifecycle-viewmodel = { module = "androidx.lifecycle:lifecycle-viewmodel-navigation3", version.ref = "nav3-lifecycle-viewmodel" }
-navigation3-material3-adaptive = { group = "androidx.compose.material3.adaptive", name = "adaptive-navigation3", version.ref = "nav3-material3-adaptive" }
+# Navigation Compose
+jetbrains-compose-navigation = { module ="org.jetbrains.androidx.navigation:navigation-compose", version.ref ="navigation-compose" }
 
 # Dependency Injection (Koin)
 koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
 koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin" }
 koin-compose-viewmodel = { module = "io.insert-koin:koin-compose-viewmodel", version.ref = "koin" }
+
 
 # Image Loading (Coil)
 coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coil" }
@@ -117,5 +113,5 @@ koin-common = [
 ]
 
 koin-android = [
-    "koin-android"
+    "koin-android",
 ]
